# Practise

./: CMakeCache.txt  CMakeLists.txt  Encoder.cpp  Encoder.h  Makefile  cmake_install.cmake  main.cpp
Encryptions-master/: Encryptions.h
